--- a/Common/OfficeOnline/OfficeOnline.csproj
+++ b/Common/OfficeOnline/OfficeOnline.csproj
@@ -53,7 +53,26 @@
     <Reference Include="System.Web.Mobile" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ActiveX\DSOframer2007\DSOframer.CAB" />
+    <Content Include="ActiveX\DSOframer2007\DsoFramer_KB311765_x86.exe" />
+    <Content Include="ActiveX\DSOframer2007\readmen.txt" />
+    <Content Include="ActiveX\DSOframer\DSOframer2007.CAB" />
+    <Content Include="ActiveX\DSOframer\readme.txt" />
+    <Content Include="ActiveX\WebFileHelper.CAB" />
+    <Content Include="ActiveX\WebFileHelper2.CAB" />
     <Content Include="Default.aspx" />
+    <Content Include="DSOframer_MSOfficialSample\bottomcurve.gif" />
+    <Content Include="DSOframer_MSOfficialSample\lefttopcurve.gif" />
+    <Content Include="DSOframer_MSOfficialSample\mslogo.gif" />
+    <Content Include="DSOframer_MSOfficialSample\officelogo.gif" />
+    <Content Include="DSOframer_MSOfficialSample\righttopcurve.gif" />
+    <Content Include="DSOframer_MSOfficialSample\webtest.htm" />
+    <Content Include="DSOframer_MySample\bottomcurve.gif" />
+    <Content Include="DSOframer_MySample\lefttopcurve.gif" />
+    <Content Include="DSOframer_MySample\mslogo.gif" />
+    <Content Include="DSOframer_MySample\officelogo.gif" />
+    <Content Include="DSOframer_MySample\righttopcurve.gif" />
+    <Content Include="DSOframer_MySample\webtest.htm" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
