--- a/Common/OfficeOnline/OfficeOnline.csproj
+++ b/Common/OfficeOnline/OfficeOnline.csproj
@@ -86,6 +86,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Demo_DSOframer\Doc\123.doc" />
+  </ItemGroup>
+  <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
