--- a/Common/CKEditor/CKEditor.csproj
+++ b/Common/CKEditor/CKEditor.csproj
@@ -4,12 +4,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6851EC8A-45A8-4AA1-9D15-BA9AF16E3799}</ProjectGuid>
+    <ProjectGuid>{225D9432-FBC8-4AA0-B65F-BBBDB29F25DA}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OfficeOnline</RootNamespace>
-    <AssemblyName>OfficeOnline</AssemblyName>
+    <RootNamespace>CKEditor</RootNamespace>
+    <AssemblyName>CKEditor</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -53,27 +53,7 @@
     <Reference Include="System.Web.Mobile" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Demo_DSOframer\ActiveX\DSOframer2007\DSOframer2007.CAB" />
-    <Content Include="Demo_DSOframer\ActiveX\DSOframer2007\readme.txt" />
-    <Content Include="Demo_DSOframer\ActiveX\DSOframer\DSOframer.CAB" />
-    <Content Include="Demo_DSOframer\ActiveX\DSOframer\DsoFramer_KB311765_x86.exe" />
-    <Content Include="Demo_DSOframer\ActiveX\DSOframer\readme.txt" />
-    <Content Include="Demo_DSOframer\ActiveX\WebFileHelper.CAB" />
-    <Content Include="Demo_DSOframer\ActiveX\WebFileHelper2.CAB" />
     <Content Include="Default.aspx" />
-    <Content Include="Demo_DSOframer\bottomcurve.gif" />
-    <Content Include="Demo_DSOframer\lefttopcurve.gif" />
-    <Content Include="Demo_DSOframer\mslogo.gif" />
-    <Content Include="Demo_DSOframer\officelogo.gif" />
-    <Content Include="Demo_DSOframer\righttopcurve.gif" />
-    <Content Include="Demo_DSOframer\webtest.htm" />
-    <Content Include="Demo_DSOframer\script.js" />
-    <Content Include="Demo_DSOframer\style.css" />
-    <Content Include="Demo_DSOframer\webtest2.htm" />
-    <Content Include="Demo_DSOframer\webtest3.htm" />
-    <Content Include="Demo_DSOframer\webtest4.aspx" />
-    <Content Include="Demo_Layout\style.css" />
-    <Content Include="Demo_Layout\webtest.htm" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -84,22 +64,10 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Demo_DSOframer\webtest4.aspx.cs">
-      <DependentUpon>webtest4.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Demo_DSOframer\webtest4.aspx.designer.cs">
-      <DependentUpon>webtest4.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Demo_DSOframer\Doc\111.doc" />
-    <None Include="Demo_DSOframer\Doc\123.doc" />
-  </ItemGroup>
-  <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="CKEditor\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
@@ -116,7 +84,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>22025</DevelopmentServerPort>
+          <DevelopmentServerPort>10150</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
