修改文件名称，新增README.md文件。

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,39 @@
 ﻿
+# .Net temp files
 .metadata/
-
 bin/
-
 obj/
-
-output/
-
 _ReSharper.*/
-
-_temp/
-
 *.suo
-
 *.scc
-
 *.vspscc
-
 *.vssscc
+*.user
+/stonefw.Web/TempFile
+/*.vs
+/.vs
+
+# Folder view configuration files
+/*.DS_Store
+*.DS_Store
+.DS_Store
+Desktop.ini
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# Compiled Python files
+*.pyc
+
+# Compiled C++ files
+*.out
+
+# Application specific files
+venv
+node_modules
+.sass-cache
